# MobileRobotNavigation

./: README.md
sandbox_robot/: CMakeLists.txt  package.xml
sandbox_robot_control/: CMakeLists.txt  package.xml
sandbox_robot_control/launch/: myrobot_control.launch
sandbox_robot_description/: CMakeLists.txt  package.xml
sandbox_robot_description/launch/: mybot_rviz.launch  mybot_rviz_amcl.launch  mybot_rviz_gmapping.launch
sandbox_robot_description/rviz/: mapping.rviz
sandbox_robot_description/urdf/: big_warehouse_robot.xacro  exp_robot.xacro  high_speed_robot.xacro  mybot.gazebo  mybot.xacro  warehouse_robot_with_3d_camera.xacro
sandbox_robot_description/urdf/sensors/: 3d_camera.gazebo.xacro  3d_camera.urdf.xacro
sandbox_robot_gazebo/: CMakeLists.txt  package.xml
sandbox_robot_gazebo/launch/: 3d_camera_world.launch  mybot_world.launch  test.launch
sandbox_robot_gazebo/models/Hand_Forklift/: model.config  model.sdf
sandbox_robot_gazebo/models/Hand_Forklift/materials/scripts/: Hand_Forklift.material
sandbox_robot_gazebo/models/Hand_Forklift/meshes/: Hand_Forklift.dae
sandbox_robot_gazebo/models/Ladder/: model.config  model.sdf
sandbox_robot_gazebo/models/Ladder/materials/scripts/: Ladder.material
sandbox_robot_gazebo/models/Ladder/meshes/: Ladder.dae
sandbox_robot_gazebo/models/Manual_Forklift/: model.config  model.sdf
sandbox_robot_gazebo/models/Manual_Forklift/meshes/: Manual_Forklift.dae
sandbox_robot_gazebo/models/Pallet_Truck/: model.config  model.sdf
sandbox_robot_gazebo/models/Pallet_Truck/meshes/: Pallet_Truck.dae
sandbox_robot_gazebo/models/Pallet_tank/: model.config  model.sdf
sandbox_robot_gazebo/models/Pallet_tank/meshes/: Pallet_tank.dae
sandbox_robot_gazebo/models/Ramp/: model.config  model.sdf
sandbox_robot_gazebo/models/Ramp/materials/scripts/: Ramp.material
sandbox_robot_gazebo/models/Ramp/meshes/: Ramp.dae
sandbox_robot_gazebo/models/Warehouse_Large/: model.config  model.sdf
sandbox_robot_gazebo/worlds/: appbot.world  model.dae  sample.stl  test_world.world
sandbox_robot_navigation/: CMakeLists.txt  package.xml
sandbox_robot_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_planners.yaml  local_costmap_params.yaml  local_planners.yaml  recovery_behaviors.yaml
sandbox_robot_navigation/launch/: 3d_camera_create_map.launch  3d_camera_load_map.launch  amcl.launch  create_map.launch  gmapping.launch  map_server.launch  move_base_flex.launch  move_base_flex_simple.launch  sandbox_environment_3d_move_base_flex.launch  sandbox_environment_move_base_flex.launch
sandbox_robot_navigation/maps/: latest_map_test.yaml  warehouse_map.pgm  warehouse_map.yaml
sandbox_robot_navigation/rviz/: move_base_flex.rviz
sandbox_robot_navigation/scripts/: mbf_state_machine.py  plan_exec_sm.py
sandbox_robot_navigation/src/: costmap_saver.cpp  navigation_test.cpp
(+4 files in other folders)
