<?xml version="1.0"?>
<package>
  <name>sandbox_robot_navigation</name>
  <version>0.5.0</version>
  <description>Sets up the navigation stack for sandbox robot using Move Base Flex.</description>

  <maintainer email="akash.patil92@gmail.com">Akash Patil</maintainer>

  <license>BSD</license>
  <author email="akash.patil92@gmail.com">Akash Patil</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>move_base_flex</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
